# sdk-bsp-stm32h750-realthread-artpi

libraries/: Kconfig
libraries/drivers/: SConscript  drv_i2c.c  drv_soft_i2c.c
libraries/drivers/include/: drv_config.h
libraries/drivers/include/config/: i2c_config.h
projects/art_pi_lvgl_template/: .config  .gitignore  rtconfig.h  rtconfig.py
projects/art_pi_lvgl_template/applications/lvgl/: SConscript  lv_app.c
projects/art_pi_lvgl_template/board/CubeMX_Config/Core/Inc/: stm32h7xx_it.h
projects/art_pi_nes_emulator/: .config  .gitignore  CMakeLists.txt  README.md  rtconfig.h
projects/art_pi_nes_emulator/applications/file_browser/: SConscript  file_browser.c  file_browser.h
projects/art_pi_nes_emulator/applications/file_browser/ui/: lv_ui_entry.c  ui.c  ui.h
projects/art_pi_nes_emulator/applications/lvgl/: lv_conf.h  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
projects/art_pi_nes_emulator/applications/nes_controller/: SConscript  nes_controller.c  nes_controller.h  nes_controller_thread.c
projects/art_pi_nes_emulator/applications/nofrendo/: SConscript  nofconfig.h  nofrendo.c  nofrendo.h  noftypes.h
projects/art_pi_nes_emulator/applications/nofrendo_port/: SConscript  audio.c  audio.h  emulator.c  input.c  input.h  osd.c  video.c  video.h
projects/art_pi_nes_emulator/applications/nofrendo_port/ui/: emulator_ui.c  emulator_ui.h
projects/art_pi_nes_emulator/board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
projects/art_pi_nes_emulator/board/CubeMX_Config/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
projects/art_pi_nes_emulator/board/CubeMX_Config/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
projects/art_pi_nes_emulator/board/port/: filesystem.c
projects/lvgl_squareline_template/: .config  .gitignore  CMakeLists.txt  README.md
projects/lvgl_squareline_template/applications/lvgl/: lv_conf.h
projects/lvgl_squareline_template/board/CubeMX_Config/: CubeMX_Config.ioc
projects/lvgl_squareline_template/board/CubeMX_Config/Core/Src/: main.c
rt-thread/tools/: cmake.py
rt-thread/tools/kconfig-frontends/: .sconsign.dblite  kconfig-mconf
