CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR cortex-m7)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_C_COMPILER "/usr/bin/arm-none-eabi-gcc")
SET(CMAKE_ASM_COMPILER "/usr/bin/arm-none-eabi-gcc")
SET(CMAKE_C_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g -std=c99")
SET(CMAKE_ASM_FLAGS " -c -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -x assembler-with-cpp -Wa,-mimplicit-it=thumb  -gdwarf-2")
SET(CMAKE_C_COMPILER_WORKS TRUE)

SET(CMAKE_CXX_COMPILER "/usr/bin/arm-none-eabi-g++")
SET(CMAKE_CXX_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g")
SET(CMAKE_CXX_COMPILER_WORKS TRUE)

SET(CMAKE_OBJCOPY "/usr/bin/arm-none-eabi-objcopy")
SET(CMAKE_SIZE "/usr/bin/arm-none-eabi-size")

SET(CMAKE_EXE_LINKER_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Wl,--gc-sections,--print-memory-usage,-Map=rtthread.map,-cref,-u,Reset_Handler -T ${CMAKE_SOURCE_DIR}/board/linker_scripts/STM32H750XBHx/link.lds")

SET(CMAKE_CXX_STANDARD 14)
PROJECT(rtthread C CXX ASM)
INCLUDE_DIRECTORIES(
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Include",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/STM32H7xx_HAL/CMSIS/Include",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Inc",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/drivers",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/drivers/include",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/drivers/include/config",
	"/home/nekspire/programming/embedded/rt-thread/sdk-bsp-stm32h750-realthread-artpi/libraries/samples",
	.
	applications
	applications/file_browser
	applications/file_browser/ui
	applications/lvgl
	applications/nes_controller
	applications/nofrendo
	applications/nofrendo/cpu
	applications/nofrendo/libsnss
	applications/nofrendo/mappers
	applications/nofrendo/nes
	applications/nofrendo/sndhrdw
	applications/nofrendo_port
	applications/nofrendo_port/ui
	board
	board/CubeMX_Config/Core/Inc
	board/port
	packages/LVGL-v8.3.6/env_support/rt-thread
	packages/LVGL-v8.3.6/src
	packages/LVGL-v8.3.6/src/core
	packages/LVGL-v8.3.6/src/draw
	packages/LVGL-v8.3.6/src/draw/arm2d
	packages/LVGL-v8.3.6/src/draw/nxp/pxp
	packages/LVGL-v8.3.6/src/draw/nxp/vglite
	packages/LVGL-v8.3.6/src/draw/sdl
	packages/LVGL-v8.3.6/src/draw/stm32_dma2d
	packages/LVGL-v8.3.6/src/draw/sw
	packages/LVGL-v8.3.6/src/draw/swm341_dma2d
	packages/LVGL-v8.3.6/src/extra
	packages/LVGL-v8.3.6/src/extra/layouts
	packages/LVGL-v8.3.6/src/extra/layouts/flex
	packages/LVGL-v8.3.6/src/extra/layouts/grid
	packages/LVGL-v8.3.6/src/extra/libs
	packages/LVGL-v8.3.6/src/extra/libs/bmp
	packages/LVGL-v8.3.6/src/extra/libs/ffmpeg
	packages/LVGL-v8.3.6/src/extra/libs/freetype
	packages/LVGL-v8.3.6/src/extra/libs/fsdrv
	packages/LVGL-v8.3.6/src/extra/libs/gif
	packages/LVGL-v8.3.6/src/extra/libs/png
	packages/LVGL-v8.3.6/src/extra/libs/qrcode
	packages/LVGL-v8.3.6/src/extra/libs/rlottie
	packages/LVGL-v8.3.6/src/extra/libs/sjpg
	packages/LVGL-v8.3.6/src/extra/others
	packages/LVGL-v8.3.6/src/extra/others/fragment
	packages/LVGL-v8.3.6/src/extra/others/gridnav
	packages/LVGL-v8.3.6/src/extra/others/ime
	packages/LVGL-v8.3.6/src/extra/others/imgfont
	packages/LVGL-v8.3.6/src/extra/others/monkey
	packages/LVGL-v8.3.6/src/extra/others/msg
	packages/LVGL-v8.3.6/src/extra/others/snapshot
	packages/LVGL-v8.3.6/src/extra/themes
	packages/LVGL-v8.3.6/src/extra/themes/basic
	packages/LVGL-v8.3.6/src/extra/themes/default
	packages/LVGL-v8.3.6/src/extra/themes/mono
	packages/LVGL-v8.3.6/src/extra/widgets
	packages/LVGL-v8.3.6/src/extra/widgets/animimg
	packages/LVGL-v8.3.6/src/extra/widgets/calendar
	packages/LVGL-v8.3.6/src/extra/widgets/chart
	packages/LVGL-v8.3.6/src/extra/widgets/colorwheel
	packages/LVGL-v8.3.6/src/extra/widgets/imgbtn
	packages/LVGL-v8.3.6/src/extra/widgets/keyboard
	packages/LVGL-v8.3.6/src/extra/widgets/led
	packages/LVGL-v8.3.6/src/extra/widgets/list
	packages/LVGL-v8.3.6/src/extra/widgets/menu
	packages/LVGL-v8.3.6/src/extra/widgets/meter
	packages/LVGL-v8.3.6/src/extra/widgets/msgbox
	packages/LVGL-v8.3.6/src/extra/widgets/span
	packages/LVGL-v8.3.6/src/extra/widgets/spinbox
	packages/LVGL-v8.3.6/src/extra/widgets/spinner
	packages/LVGL-v8.3.6/src/extra/widgets/tabview
	packages/LVGL-v8.3.6/src/extra/widgets/tileview
	packages/LVGL-v8.3.6/src/extra/widgets/win
	packages/LVGL-v8.3.6/src/font
	packages/LVGL-v8.3.6/src/hal
	packages/LVGL-v8.3.6/src/misc
	packages/LVGL-v8.3.6/src/widgets
	../../rt-thread/components/dfs/filesystems/devfs
	../../rt-thread/components/dfs/filesystems/elmfat
	../../rt-thread/components/dfs/filesystems/romfs
	../../rt-thread/components/dfs/include
	../../rt-thread/components/drivers/include
	../../rt-thread/components/drivers/spi
	../../rt-thread/components/drivers/spi/sfud/inc
	../../rt-thread/components/finsh
	../../rt-thread/components/libc/compilers/common
	../../rt-thread/components/libc/compilers/newlib
	../../rt-thread/components/libc/posix/io/poll
	../../rt-thread/components/libc/posix/io/stdio
	../../rt-thread/components/libc/posix/ipc
	../../rt-thread/include
	../../rt-thread/libcpu/arm/common
	../../rt-thread/libcpu/arm/cortex-m7
)

ADD_DEFINITIONS(
	-DHAVE_CCONFIG_H
	-DRT_USING_NEWLIB
	-DSTM32H7
	-DSTM32H750xx
	-DUSE_HAL_DRIVER
	-D_POSIX_C_SOURCE=1
	-D__RTTHREAD__
)

SET(PROJECT_SOURCES
	applications/main.c
	../../rt-thread/components/libc/compilers/newlib/syscalls.c
	../../rt-thread/components/libc/compilers/common/stdlib.c
	../../rt-thread/components/libc/compilers/common/time.c
	../../rt-thread/libcpu/arm/common/showmem.c
	../../rt-thread/libcpu/arm/common/div0.c
	../../rt-thread/libcpu/arm/common/backtrace.c
	../../rt-thread/libcpu/arm/cortex-m7/context_gcc.S
	../../rt-thread/libcpu/arm/cortex-m7/cpuport.c
	../../rt-thread/libcpu/arm/cortex-m7/cpu_cache.c
	../../rt-thread/components/drivers/mtd/mtd_nor.c
	../../rt-thread/components/drivers/spi/sfud/src/sfud.c
	../../rt-thread/components/drivers/spi/sfud/src/sfud_sfdp.c
	../../rt-thread/components/drivers/spi/spi_flash_sfud.c
	../../rt-thread/components/drivers/spi/spi_dev.c
	../../rt-thread/components/drivers/spi/spi_core.c
	../../rt-thread/components/drivers/i2c/i2c_dev.c
	../../rt-thread/components/drivers/i2c/i2c_core.c
	../../rt-thread/components/drivers/misc/pin.c
	../../rt-thread/components/drivers/sdio/sdio.c
	../../rt-thread/components/drivers/sdio/block_dev.c
	../../rt-thread/components/drivers/sdio/mmc.c
	../../rt-thread/components/drivers/sdio/mmcsd_core.c
	../../rt-thread/components/drivers/sdio/sd.c
	../../rt-thread/components/drivers/serial/serial.c
	../../rt-thread/components/drivers/ipc/ringbuffer.c
	../../rt-thread/components/drivers/ipc/pipe.c
	../../rt-thread/components/drivers/ipc/waitqueue.c
	../../rt-thread/components/drivers/ipc/dataqueue.c
	../../rt-thread/components/drivers/ipc/completion.c
	../../rt-thread/components/drivers/ipc/ringblk_buf.c
	../../rt-thread/components/drivers/ipc/workqueue.c
	board/drv_mpu.c
	board/CubeMX_Config/Core/Src/stm32h7xx_hal_msp.c
	board/board.c
	board/port/filesystem.c
	../../libraries/drivers/drv_usart.c
	../../libraries/drivers/drv_gpio.c
	../../libraries/drivers/drv_i2c.c
	../../libraries/drivers/drv_lcd.c
	../../libraries/drivers/drv_wlan.c
	../../libraries/drivers/drv_sdio.c
	../../libraries/drivers/drv_common.c
	../../libraries/drivers/drv_spi.c
	../../libraries/drivers/drv_sdram.c
	applications/file_browser/ui/ui.c
	applications/file_browser/file_browser.c
	../../rt-thread/components/dfs/src/dfs_file.c
	../../rt-thread/components/dfs/src/dfs.c
	../../rt-thread/components/dfs/src/dfs_fs.c
	../../rt-thread/components/dfs/src/dfs_posix.c
	../../rt-thread/components/dfs/filesystems/romfs/dfs_romfs.c
	../../rt-thread/components/dfs/filesystems/romfs/romfs.c
	../../rt-thread/components/dfs/filesystems/devfs/devfs.c
	../../rt-thread/components/dfs/filesystems/elmfat/dfs_elm.c
	../../rt-thread/components/dfs/filesystems/elmfat/ff.c
	../../rt-thread/components/dfs/filesystems/elmfat/ffunicode.c
	../../rt-thread/components/finsh/msh_file.c
	../../rt-thread/components/finsh/shell.c
	../../rt-thread/components/finsh/cmd.c
	../../rt-thread/components/finsh/msh.c
	../../rt-thread/src/idle.c
	../../rt-thread/src/clock.c
	../../rt-thread/src/thread.c
	../../rt-thread/src/kservice.c
	../../rt-thread/src/scheduler.c
	../../rt-thread/src/object.c
	../../rt-thread/src/irq.c
	../../rt-thread/src/memheap.c
	../../rt-thread/src/timer.c
	../../rt-thread/src/components.c
	../../rt-thread/src/device.c
	../../rt-thread/src/ipc.c
	../../rt-thread/src/mempool.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_layer.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_24.c
	packages/LVGL-v8.3.6/src/extra/widgets/tileview/lv_tileview.c
	packages/LVGL-v8.3.6/src/extra/libs/sjpg/lv_sjpg.c
	packages/LVGL-v8.3.6/src/misc/lv_mem.c
	packages/LVGL-v8.3.6/src/core/lv_disp.c
	packages/LVGL-v8.3.6/src/misc/lv_txt.c
	packages/LVGL-v8.3.6/src/widgets/lv_roller.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_mask.c
	packages/LVGL-v8.3.6/src/core/lv_obj_pos.c
	packages/LVGL-v8.3.6/src/widgets/lv_textarea.c
	packages/LVGL-v8.3.6/src/draw/lv_img_buf.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_bg.c
	packages/LVGL-v8.3.6/src/extra/others/fragment/lv_fragment.c
	packages/LVGL-v8.3.6/src/font/lv_font_dejavu_16_persian_hebrew.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_draw_vglite_rect.c
	packages/LVGL-v8.3.6/src/extra/libs/qrcode/lv_qrcode.c
	packages/LVGL-v8.3.6/src/misc/lv_txt_ap.c
	packages/LVGL-v8.3.6/src/core/lv_obj_style_gen.c
	packages/LVGL-v8.3.6/src/misc/lv_ll.c
	packages/LVGL-v8.3.6/src/extra/widgets/imgbtn/lv_imgbtn.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_layer.c
	packages/LVGL-v8.3.6/src/extra/widgets/list/lv_list.c
	packages/LVGL-v8.3.6/src/core/lv_indev_scroll.c
	packages/LVGL-v8.3.6/src/widgets/lv_bar.c
	packages/LVGL-v8.3.6/src/extra/others/monkey/lv_monkey.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_arc.c
	packages/LVGL-v8.3.6/src/extra/others/fragment/lv_fragment_manager.c
	packages/LVGL-v8.3.6/src/extra/libs/qrcode/qrcodegen.c
	packages/LVGL-v8.3.6/src/extra/libs/freetype/lv_freetype.c
	packages/LVGL-v8.3.6/src/misc/lv_printf.c
	packages/LVGL-v8.3.6/src/misc/lv_area.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_42.c
	packages/LVGL-v8.3.6/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c
	packages/LVGL-v8.3.6/src/widgets/lv_checkbox.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_stack_blur.c
	packages/LVGL-v8.3.6/src/core/lv_obj_tree.c
	packages/LVGL-v8.3.6/src/widgets/lv_btnmatrix.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_rect.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_28_compressed.c
	packages/LVGL-v8.3.6/src/extra/widgets/calendar/lv_calendar_header_dropdown.c
	packages/LVGL-v8.3.6/src/extra/widgets/span/lv_span.c
	packages/LVGL-v8.3.6/src/misc/lv_bidi.c
	packages/LVGL-v8.3.6/src/hal/lv_hal_tick.c
	packages/LVGL-v8.3.6/src/misc/lv_color.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_30.c
	packages/LVGL-v8.3.6/src/extra/libs/png/lodepng.c
	packages/LVGL-v8.3.6/src/draw/nxp/pxp/lv_gpu_nxp_pxp.c
	packages/LVGL-v8.3.6/src/widgets/lv_label.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_polygon.c
	packages/LVGL-v8.3.6/src/core/lv_obj_scroll.c
	packages/LVGL-v8.3.6/src/widgets/lv_dropdown.c
	packages/LVGL-v8.3.6/src/extra/others/gridnav/lv_gridnav.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_dither.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_16.c
	packages/LVGL-v8.3.6/src/extra/widgets/calendar/lv_calendar.c
	packages/LVGL-v8.3.6/src/extra/libs/bmp/lv_bmp.c
	packages/LVGL-v8.3.6/src/misc/lv_lru.c
	packages/LVGL-v8.3.6/src/hal/lv_hal_indev.c
	packages/LVGL-v8.3.6/src/misc/lv_templ.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_8.c
	packages/LVGL-v8.3.6/src/extra/libs/png/lv_png.c
	packages/LVGL-v8.3.6/src/extra/widgets/win/lv_win.c
	packages/LVGL-v8.3.6/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c
	packages/LVGL-v8.3.6/src/widgets/lv_btn.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_arc.c
	packages/LVGL-v8.3.6/src/draw/nxp/pxp/lv_draw_pxp.c
	packages/LVGL-v8.3.6/src/core/lv_theme.c
	packages/LVGL-v8.3.6/src/widgets/lv_objx_templ.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_transform.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_38.c
	packages/LVGL-v8.3.6/src/extra/widgets/calendar/lv_calendar_header_arrow.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_line.c
	packages/LVGL-v8.3.6/src/misc/lv_gc.c
	packages/LVGL-v8.3.6/src/hal/lv_hal_disp.c
	packages/LVGL-v8.3.6/src/misc/lv_timer.c
	packages/LVGL-v8.3.6/src/font/lv_font_unscii_16.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl.c
	packages/LVGL-v8.3.6/src/extra/others/msg/lv_msg.c
	packages/LVGL-v8.3.6/src/core/lv_obj_class.c
	packages/LVGL-v8.3.6/src/widgets/lv_canvas.c
	packages/LVGL-v8.3.6/src/extra/widgets/led/lv_led.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_letter.c
	packages/LVGL-v8.3.6/src/font/lv_font_unscii_8.c
	packages/LVGL-v8.3.6/src/extra/widgets/msgbox/lv_msgbox.c
	packages/LVGL-v8.3.6/src/extra/libs/rlottie/lv_rlottie.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_mask.c
	packages/LVGL-v8.3.6/src/misc/lv_log.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_32.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_22.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_label.c
	packages/LVGL-v8.3.6/src/core/lv_obj_draw.c
	packages/LVGL-v8.3.6/src/widgets/lv_arc.c
	packages/LVGL-v8.3.6/src/extra/themes/basic/lv_theme_basic.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_blend.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_34.c
	packages/LVGL-v8.3.6/src/extra/widgets/spinbox/lv_spinbox.c
	packages/LVGL-v8.3.6/src/draw/lv_draw.c
	packages/LVGL-v8.3.6/src/draw/arm2d/lv_gpu_arm2d.c
	packages/LVGL-v8.3.6/src/misc/lv_anim.c
	packages/LVGL-v8.3.6/src/font/lv_font.c
	packages/LVGL-v8.3.6/src/font/lv_font_loader.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_composite.c
	packages/LVGL-v8.3.6/src/extra/others/imgfont/lv_imgfont.c
	packages/LVGL-v8.3.6/src/extra/libs/fsdrv/lv_fs_stdio.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_vglite_utils.c
	packages/LVGL-v8.3.6/src/core/lv_group.c
	packages/LVGL-v8.3.6/src/widgets/lv_table.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_polygon.c
	packages/LVGL-v8.3.6/src/extra/widgets/spinner/lv_spinner.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_12_subpx.c
	packages/LVGL-v8.3.6/src/misc/lv_fs.c
	packages/LVGL-v8.3.6/src/draw/lv_img_decoder.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_46.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_20.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_rect.c
	packages/LVGL-v8.3.6/src/extra/libs/fsdrv/lv_fs_win32.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_vglite_buf.c
	packages/LVGL-v8.3.6/src/core/lv_obj.c
	packages/LVGL-v8.3.6/src/widgets/lv_slider.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_gradient.c
	packages/LVGL-v8.3.6/src/extra/widgets/keyboard/lv_keyboard.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_28.c
	packages/LVGL-v8.3.6/src/misc/lv_utils.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_img.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_36.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_12.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_texture_cache.c
	packages/LVGL-v8.3.6/src/extra/widgets/tabview/lv_tabview.c
	packages/LVGL-v8.3.6/src/extra/others/ime/lv_ime_pinyin.c
	packages/LVGL-v8.3.6/src/extra/libs/fsdrv/lv_fs_fatfs.c
	packages/LVGL-v8.3.6/src/extra/libs/gif/gifdec.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_draw_vglite_arc.c
	packages/LVGL-v8.3.6/src/core/lv_refr.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_line.c
	packages/LVGL-v8.3.6/src/extra/widgets/animimg/lv_animimg.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_10.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_arc.c
	packages/LVGL-v8.3.6/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_triangle.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_44.c
	packages/LVGL-v8.3.6/src/extra/layouts/flex/lv_flex.c
	packages/LVGL-v8.3.6/src/extra/themes/default/lv_theme_default.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_18.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_img.c
	packages/LVGL-v8.3.6/src/extra/libs/fsdrv/lv_fs_posix.c
	packages/LVGL-v8.3.6/src/extra/libs/gif/lv_gif.c
	packages/LVGL-v8.3.6/src/misc/lv_style_gen.c
	packages/LVGL-v8.3.6/src/core/lv_event.c
	packages/LVGL-v8.3.6/src/misc/lv_anim_timeline.c
	packages/LVGL-v8.3.6/src/widgets/lv_switch.c
	packages/LVGL-v8.3.6/src/extra/widgets/colorwheel/lv_colorwheel.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_img.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_draw_vglite_blend.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_26.c
	packages/LVGL-v8.3.6/src/draw/lv_img_cache.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw_layer.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_transform.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_40.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_48.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_utils.c
	packages/LVGL-v8.3.6/src/extra/others/snapshot/lv_snapshot.c
	packages/LVGL-v8.3.6/src/misc/lv_tlsf.c
	packages/LVGL-v8.3.6/src/core/lv_obj_style.c
	packages/LVGL-v8.3.6/src/misc/lv_math.c
	packages/LVGL-v8.3.6/src/widgets/lv_img.c
	packages/LVGL-v8.3.6/src/extra/widgets/chart/lv_chart.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_draw_vglite.c
	packages/LVGL-v8.3.6/src/font/lv_font_montserrat_14.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_rect.c
	packages/LVGL-v8.3.6/src/extra/widgets/meter/lv_meter.c
	packages/LVGL-v8.3.6/src/draw/lv_draw_label.c
	packages/LVGL-v8.3.6/src/draw/sw/lv_draw_sw.c
	packages/LVGL-v8.3.6/src/extra/layouts/grid/lv_grid.c
	packages/LVGL-v8.3.6/src/extra/themes/mono/lv_theme_mono.c
	packages/LVGL-v8.3.6/src/font/lv_font_simsun_16_cjk.c
	packages/LVGL-v8.3.6/src/draw/sdl/lv_draw_sdl_line.c
	packages/LVGL-v8.3.6/src/extra/libs/ffmpeg/lv_ffmpeg.c
	packages/LVGL-v8.3.6/src/extra/libs/sjpg/tjpgd.c
	packages/LVGL-v8.3.6/src/misc/lv_async.c
	packages/LVGL-v8.3.6/src/core/lv_indev.c
	packages/LVGL-v8.3.6/src/misc/lv_style.c
	packages/LVGL-v8.3.6/src/widgets/lv_line.c
	packages/LVGL-v8.3.6/src/extra/widgets/menu/lv_menu.c
	packages/LVGL-v8.3.6/src/draw/nxp/pxp/lv_draw_pxp_blend.c
	packages/LVGL-v8.3.6/src/draw/nxp/vglite/lv_draw_vglite_line.c
	packages/LVGL-v8.3.6/src/extra/lv_extra.c
	packages/LVGL-v8.3.6/src/font/lv_font_fmt_txt.c
	packages/lv_music_demo-v0.3.2/lv_demo_rtt_music_main.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_wave_top.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_loop.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_icon_2.c
	packages/lv_music_demo-v0.3.2/lv_demo_rtt_music_list.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_slider_knob.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_rnd.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_list_play.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_corner_left.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_prev.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_wave_bottom.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_corner_right.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_cover_3.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_list_border.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_icon_1.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_next.c
	packages/lv_music_demo-v0.3.2/lv_demo_rtt_music.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_list_pause.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_icon_4.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_pause.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_logo.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_cover_2.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_btn_play.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_cover_1.c
	packages/lv_music_demo-v0.3.2/assets/img_lv_demo_rtt_music_icon_3.c
	applications/lvgl/lv_port_disp.c
	applications/lvgl/lv_port_indev.c
	packages/LVGL-v8.3.6/env_support/rt-thread/lv_rt_thread_port.c
	applications/nes_controller/nes_controller.c
	applications/nofrendo/mappers/map024.c
	applications/nofrendo/event.c
	applications/nofrendo/gui_elem.c
	applications/nofrendo/mappers/map016.c
	applications/nofrendo/sndhrdw/fds_snd.c
	applications/nofrendo/mappers/map011.c
	applications/nofrendo/mappers/map087.c
	applications/nofrendo/nes/nes_pal.c
	applications/nofrendo/nes/nes_rom.c
	applications/nofrendo/mappers/map003.c
	applications/nofrendo/mappers/map019.c
	applications/nofrendo/nes/nesstate.c
	applications/nofrendo/mappers/map000.c
	applications/nofrendo/mappers/map094.c
	applications/nofrendo/log.c
	applications/nofrendo/mappers/map231.c
	applications/nofrendo/mappers/map007.c
	applications/nofrendo/mappers/map041.c
	applications/nofrendo/mappers/map065.c
	applications/nofrendo/nes/nesinput.c
	applications/nofrendo/mappers/map042.c
	applications/nofrendo/mappers/map046.c
	applications/nofrendo/mappers/map050.c
	applications/nofrendo/mappers/map075.c
	applications/nofrendo/mappers/map005.c
	applications/nofrendo/pcx.c
	applications/nofrendo/vid_drv.c
	applications/nofrendo/cpu/dis6502.c
	applications/nofrendo/mappers/map008.c
	applications/nofrendo/gui.c
	applications/nofrendo/mappers/map070.c
	applications/nofrendo/sndhrdw/vrcvisnd.c
	applications/nofrendo/mappers/map032.c
	applications/nofrendo/mappers/map085.c
	applications/nofrendo/nes/nes_mmc.c
	applications/nofrendo/mappers/map018.c
	applications/nofrendo/mappers/map099.c
	applications/nofrendo/mappers/map015.c
	applications/nofrendo/bitmap.c
	applications/nofrendo/libsnss/libsnss.c
	applications/nofrendo/nofrendo.c
	applications/nofrendo/mappers/map064.c
	applications/nofrendo/sndhrdw/nes_apu.c
	applications/nofrendo/mappers/map004.c
	applications/nofrendo/mappers/map009.c
	applications/nofrendo/nes/mmclist.c
	applications/nofrendo/nes/nes.c
	applications/nofrendo/mappers/map079.c
	applications/nofrendo/mappers/map229.c
	applications/nofrendo/nes/nes_ppu.c
	applications/nofrendo/mappers/map073.c
	applications/nofrendo/mappers/map078.c
	applications/nofrendo/intro.c
	applications/nofrendo/cpu/nes6502.c
	applications/nofrendo/mappers/map001.c
	applications/nofrendo/mappers/mapvrc.c
	applications/nofrendo/config.c
	applications/nofrendo/memguard.c
	applications/nofrendo/mappers/map033.c
	applications/nofrendo/mappers/map034.c
	applications/nofrendo/mappers/map066.c
	applications/nofrendo/mappers/map093.c
	applications/nofrendo/mappers/map160.c
	applications/nofrendo/sndhrdw/mmc5_snd.c
	applications/nofrendo/mappers/map040.c
	applications/nofrendo/mappers/map002.c
	applications/nofrendo_port/ui/emulator_ui.c
	applications/nofrendo_port/input.c
	applications/nofrendo_port/video.c
	applications/nofrendo_port/audio.c
	applications/nofrendo_port/emulator.c
	applications/nofrendo_port/osd.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
	../../libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/startup_stm32h750xx.s
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_nor.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_adc_ex.c
	../../libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/system_stm32h7xx.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
	../../libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
)

LINK_DIRECTORIES(
)

LINK_LIBRARIES(
	m
	c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD 
COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)